--- a/2. Website styling using CSS/index.html
+++ b/2. Website styling using CSS/index.html
@@ -4,41 +4,51 @@
        <title>"George Not Found Tribute</title> 
        <meta name="description" content="This is the description for the GNF Tribute website"/>
        <meta name="theme-color" content="#226DAA"/>
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+       <link rel="stylesheet" href="style.css"/>
     </head>
 
     <body>
-        <h1>George Not Found</h1>
-        <a>https://youtube.fandom.com/wiki/GeorgeNotFound</a>
-        <p>George Davidson (born: November 1, 1996 [age 28]), better known online as 
-        GeorgeNotFound (also abbreviated as GNF), or Gogy, is an English YouTuber 
-        most known for creating Minecraft videos. He frequently collaborates with 
-        fellow Minecraft YouTubers Sapnap, BadBoyHalo, and Dream, and is part and 
-        co-founder of the Minecraft Dream SMP server along with other streamers 
-        and YouTubers. George's first public video was uploaded on October 25, 
-        2019 titled "Minecraft Endermen Destruction (Timelapse)". Many of his 
-        videos are Minecraft challenge videos, typically following the title 
-        format "Minecraft, but..." or "Minecraft Hunter VS Speedrunner", in the 
-        latter of which he usually collaborates with Dream.</p>
-        <img style="height: 250px;" src="image_gnf.jpg">
 
-            <h3>Contents</h3>
-                <ul>Personal life</ul>
-                <ul>Controversies</ul>
+            <h1>George Not Found</h1>
+            <a>https://youtube.fandom.com/wiki/GeorgeNotFound</a>
+            <p>George Davidson (born: November 1, 1996 [age 28]), better known online as 
+            GeorgeNotFound (also abbreviated as GNF), or Gogy, is an English YouTuber 
+            most known for creating Minecraft videos. He frequently collaborates with 
+            fellow Minecraft YouTubers Sapnap, BadBoyHalo, and Dream, and is part and 
+            co-founder of the Minecraft Dream SMP server along with other streamers 
+            and YouTubers. George's first public video was uploaded on October 25, 
+            2019 titled "Minecraft Endermen Destruction (Timelapse)". Many of his 
+            videos are Minecraft challenge videos, typically following the title 
+            format "Minecraft, but..." or "Minecraft Hunter VS Speedrunner", in the 
+            latter of which he usually collaborates with Dream.</p>
+            <div style="text-align: center">
+                <img style="height: 250px; border-radius: 5px;" src="image_gnf.jpg">
+            </div>
 
-        <h2>Personal life</h2>
-            <h3>Colourblindness</h3>
-                <p>On April 15, 2020, George confirmed on Twitter that he has severe protanopia (red-green colorblindness).[5] He bought colorblind glasses to help him distinguish red-green colors, and on September 9, 2020, he uploaded his reaction to him being able to differentiate color properly for the first time.</p>
+                <h3>Contents</h3>
+                    <ol>
+                        <li><a href="#personal_life">Personal life</a></li>
+                        <li><a href="#controversies">Controversies</a></li>
+                    </ol>
+                    <br>
 
-            <h3>Pets</h3>
-                <p>George got a cat named Luca (April 26, 2019 - July 28, 2020 [aged 1]) in late October 2019.[7] The cat was nicknamed Pooper for pooing on George's bed.</p>
-                <p>On July 28, 2020, George revealed during a livestream (and later on Twitter) that he had noticed Luca was breathing strangely and so took him to the vet. Luca was then diagnosed with a rare and incurable disease and had to be put down.</p>
 
-        <h2>Controversies</h2>
-            <h3>Allegations of sexual assault</h3>
-                <p>On March 9, 2024, Twitch streamer Caitibugzz went live to tell her story about how she was sexually assaulted by another, larger content creator.[12] In this livestream, she explained how she was at a party and was drunk, with the creator making sexual advances towards her unconsensually. Many were quick to point out that the creator she was referring to was George, to which he responded, confirming this information. In said tweet,[13] he stated he would be making a livestream addressing the allegations, denying the latter.</p>
-                <p>On March 11, he went live on Twitch, addressing the allegations.[15] In said stream, he explained how he felt that Caiti "consented" to cuddling and touching on her waist (in spite of Caiti, who was drunk, not being able to give consent), and that he believed they were all over the legal drinking age, as some of her friends had bracelets stating they were over that age. The reactions to the livestream were mixed. Many were quick to point out that she couldn't consent as she was under alcoholism.</p>
-                <p>George released another response video on March 16, further addressing and attempting to debunk Caiti's points. The video also contained proof that Caiti had lied and falsified some messages, which created more proof against her. The video received more positive responses from George's fans, with some believing that the situation was blown out of proportions and should have been handled privately.</p>
+            <h2 id="personal_life">Personal life</h2>
+                <h3>Colourblindness</h3>
+                    <p>On April 15, 2020, George confirmed on Twitter that he has severe protanopia (red-green colorblindness).[5] He bought colorblind glasses to help him distinguish red-green colors, and on September 9, 2020, he uploaded his reaction to him being able to differentiate color properly for the first time.</p>
 
-        <p></p>
+                <h3>Pets</h3>
+                    <p>George got a cat named Luca (April 26, 2019 - July 28, 2020 [aged 1]) in late October 2019.[7] The cat was nicknamed Pooper for pooing on George's bed.</p>
+                    <p>On July 28, 2020, George revealed during a livestream (and later on Twitter) that he had noticed Luca was breathing strangely and so took him to the vet. Luca was then diagnosed with a rare and incurable disease and had to be put down.</p>
+
+            <h2 id="controversies">Controversies</h2>
+                <h3>Allegations of sexual assault</h3>
+                    <p>On March 9, 2024, Twitch streamer Caitibugzz went live to tell her story about how she was sexually assaulted by another, larger content creator.[12] In this livestream, she explained how she was at a party and was drunk, with the creator making sexual advances towards her unconsensually. Many were quick to point out that the creator she was referring to was George, to which he responded, confirming this information. In said tweet,[13] he stated he would be making a livestream addressing the allegations, denying the latter.</p>
+                    <p>On March 11, he went live on Twitch, addressing the allegations.[15] In said stream, he explained how he felt that Caiti "consented" to cuddling and touching on her waist (in spite of Caiti, who was drunk, not being able to give consent), and that he believed they were all over the legal drinking age, as some of her friends had bracelets stating they were over that age. The reactions to the livestream were mixed. Many were quick to point out that she couldn't consent as she was under alcoholism.</p>
+                    <p>George released another response video on March 16, further addressing and attempting to debunk Caiti's points. The video also contained proof that Caiti had lied and falsified some messages, which created more proof against her. The video received more positive responses from George's fans, with some believing that the situation was blown out of proportions and should have been handled privately.</p>
+
+            <p></p>
     </body>
 </html>
