--- a/doccen.html
+++ b/doccen.html
@@ -351,7 +351,17 @@ body {
     flex-direction: column; 
 }
 
-
+header { 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 2px 16px; 
+    background: white; 
+    height: 50px; 
+    border-bottom: 1px solid rgb(241, 241, 241);
+    width: 100%;
+    box-sizing: border-box;
+}
 .knowledge-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 20px; margin-bottom: 20px; }
 
 .course-card { border: 1px solid lightgrey; border-radius: 8px; padding: 20px; background: white; }
@@ -404,6 +414,30 @@ body {
 .events-column { grid-area: 1 / 4 / 6 / 5; display: flex; flex-direction: column; gap: 15px; }
 
 .event-card { border: 1px solid lightgrey; border-radius: 8px; padding: 15px; background: white; }
+
+
+
+
+
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px 16px;
+    background: white;
+    height: 50px;
+    border-bottom: 1px solid rgb(241, 241, 241);
+    width: 100%;
+    box-sizing: border-box;
+    overflow: hidden; /* Add this to prevent overflow */
+}
+
+.search-bar {
+    flex-grow: 1; /* Changed from 2 to 1 */
+    margin: 0px 20px;
+    max-width: 500px; /* Add a max-width */
+}
 </style>
 
 
@@ -428,21 +462,19 @@ body {
 
 
 <body>
-    <header>
-        <img src="logo.png" alt="Screenshot" style="height: 75%;">
-        <div class="search-bar">
-            <input type="text" placeholder="Search...">
-        </div>
-
-        <img src="Screenshot%202025-01-21%20004948.png" style="height: 30px; margin: 0px 15px;">
-
-        <div class="top-bar-icons">
-            <img src="bell.png" style="height: 20px;">
-            <img src="align-justify.png" style="height: 20px;">
-            <img src="settings.png" style="height: 20px;">
-        </div>
-        <img src="ava.jpg" style="height: 40px; padding-left: 15px;">
-    </header>
+<header>
+    <img src="logo.png" style="height: 30px; width: auto;"> <!-- Fixed height -->
+    <div class="search-bar">
+        <input type="text" placeholder="Search...">
+    </div>
+    <img src="Screenshot%202025-01-21%20004948.png" style="height: 30px; width: auto;"> <!-- Added width: auto -->
+    <div class="top-bar-icons">
+        <img src="bell.png" style="height: 20px; width: auto;">
+        <img src="align-justify.png" style="height: 20px; width: auto;">
+        <img src="settings.png" style="height: 20px; width: auto;">
+    </div>
+    <img src="ava.jpg" style="height: 40px; width: 40px; border-radius: 50%;"> <!-- Fixed dimensions -->
+</header>
 
     <div class="everything_below_header">
         <div class="left_navigation_bar">
@@ -639,7 +671,7 @@ body {
 
     <button class="view-all-button">
         View all
-        <img src="arrow%20right.jpg" style="height: 14px; opacity: 1;">
+        <img src="arrow_right.jpg" style="height: 14px; opacity: 1;">
     </button>
     <!-- Learning Materials -->
     <div class="section-header" style="margin-top: 40px;">
@@ -690,7 +722,7 @@ body {
 
     <button class="view-all-button">
         View all
-        <img src="arrow%20right.jpg" style="height: 14px; opacity: 1;">
+        <img src="arrow_right.jpg" style="height: 14px; opacity: 1;">
     </button>
 </div>
 
