--- a/doccen.html
+++ b/doccen.html
@@ -197,6 +197,8 @@
     <div class="section-header">
         <h2>Most Popular Courses</h2>
     </div>
+                <div style="margin: -5px 0px 20px 0px">Discover the best ourses Docen has to offer Discover the best ourses Docen has to offer</div>
+
     
     <div class="knowledge-grid">
         <div class="course-card">
@@ -248,6 +250,8 @@
     <div class="section-header" style="margin-top: 40px;">
         <h2>Learning Materials</h2>
     </div>
+            <div style="margin: -5px 0px 20px 0px">Discover the best ourses Docen has to offer Discover the best ourses Docen has to offer</div>
+
 
     <div class="knowledge-grid">
         <div class="course-card">
